--- a/examples/air-traffic-control/ATC.ipynb
+++ b/examples/air-traffic-control/ATC.ipynb
@@ -586,8 +586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"figures/flights_AU.png\" width=550/></center>\n",
-    "<center><img src=\"https://github.com/MobilityDB/MobilityDuck/blob/main/examples/air-traffic-control/figures/flights_AU.png?raw=true\" width=550/></center>"
+    "<center><img src=\"figures/flights_AU.png\" width=550/></center>"
    ]
   },
   {
@@ -741,8 +740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"figures/5.1.1.png\" width=550/></center>\n",
-    "<center><img src=\"https://github.com/MobilityDB/MobilityDuck/blob/main/examples/air-traffic-control/figures/5.1.1.png?raw=true\" width=550/></center>"
+    "<center><img src=\"figures/5.1.1.png\" width=550/></center>"
    ]
   },
   {
@@ -892,8 +890,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"figures/5.1.2.png\" width=550/></center>\n",
-    "<center><img src=\"https://github.com/MobilityDB/MobilityDuck/blob/main/examples/air-traffic-control/figures/5.1.2.png?raw=true\" width=550/></center>"
+    "<center><img src=\"figures/5.1.2.png\" width=550/></center>"
    ]
   },
   {
@@ -1070,8 +1067,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"figures/5.2.png\" width=550/></center>\n",
-    "<center><img src=\"https://github.com/MobilityDB/MobilityDuck/blob/main/examples/air-traffic-control/figures/5.2.png?raw=true\" width=550/></center>"
+    "<center><img src=\"figures/5.2.png\" width=550/></center>"
    ]
   },
   {
@@ -1235,8 +1231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"figures/5.3.png\" width=600/></center>\n",
-    "<center><img src=\"https://github.com/MobilityDB/MobilityDuck/blob/main/examples/air-traffic-control/figures/5.3.png?raw=true\" width=600/></center>"
+    "<center><img src=\"figures/5.3.png\" width=600/></center>"
    ]
   },
   {
@@ -1477,8 +1472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"figures/5.4.png\" width=550/></center>\n",
-    "<center><img src=\"https://github.com/MobilityDB/MobilityDuck/blob/main/examples/air-traffic-control/figures/5.4.png?raw=true\" width=550/></center>"
+    "<center><img src=\"figures/5.4.png\" width=550/></center>"
    ]
   },
   {
@@ -1708,8 +1702,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"figures/5.5.png\" width=550/></center>\n",
-    "<center><img src=\"https://github.com/MobilityDB/MobilityDuck/blob/main/examples/air-traffic-control/figures/5.5.png?raw=true\" width=550/></center>"
+    "<center><img src=\"figures/5.5.png\" width=550/></center>"
    ]
   },
   {
@@ -1904,8 +1897,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"figures/flight_activity.png\" width=600/></center>\n",
-    "<center><img src=\"https://github.com/MobilityDB/MobilityDuck/blob/main/examples/air-traffic-control/figures/flight_activity.png?raw=true\" width=600/></center>"
+    "<center><img src=\"figures/flight_activity.png\" width=600/></center>"
    ]
   },
   {
